[package]
name = "custom_trade_orca"
version = "1.0.0"
edition = "2021"
default-run = "custom_trade_orca"

[dependencies]
tokio = { version = "1.37", features = ["rt", "macros", "time", "signal"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

anyhow = "1.0"
thiserror = "2.0"


reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
tungstenite = "0.24"
futures-util = "0.3"
url = "2.5"

base64 = "0.22"
bs58 = "0.5"

solana-sdk = "2.3.1"
solana-account = "^2.0"
solana-account-decoder = "^2.0"
solana-client = "^2.0"
solana-commitment-config = "^2.0"
solana-instruction = "^2.0"
solana-keypair = "^2.0"
solana-program-pack = "^2.0"
solana-pubkey = "^2.0"
solana-rpc-client-api = "^2.0"
solana-signature = "^2.0"
solana-signer = "^2.0"
solana-system-interface = "^1.0"
solana-transaction = "^2.0"
spl-token = "7.0.0"
spl-token-2022 = "7.0.0"
spl-associated-token-account = "6.0.0"

orca_whirlpools = "5.0.1"
orca_whirlpools_client = "6.0.0"
orca_whirlpools_core = "2.0.1"
borsh = "0.10"

rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["std", "clock"] }
